[tool.poetry]
name = "mlforscience"
version = "0.1.0"
description = ""
authors = ["Dmitry Erofeev <erofeevdma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
seaborn = "^0.13.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
wheel = "^0.44.0"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
