[tool.poetry]
name = "mlforscience"
version = "0.1.0"
description = ""
authors = ["Dmitry Erofeev <erofeevdma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
seaborn = "^0.13.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
wheel = "^0.44.0"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
xgboost = "^2.1.3"
optuna = "^4.1.0"
joblib = "^1.4.2"
imblearn = "^0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
